added filtering in filter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,12 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For Firefox */
+.scrollbar-hide {
+  scrollbar-width: none;
+}
