--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,14 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
