--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@ input::-webkit-inner-spin-button {
 
 /* Firefox */
 input[type="number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
 }
 
@@ -40,10 +41,11 @@ input[type="number"] {
 
 /* Track */
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: #e4e4e4;
 }
 
 /* Handle on hover */
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #1c819d;
+  background-color: #20a5c9;
+  cursor: pointer;
 }
