--- a/src/Components/BuildingImageSlider/styles.css
+++ b/src/Components/BuildingImageSlider/styles.css
@@ -15,3 +15,37 @@
 .swiper-button-prev .swiper-button-disabled {
   cursor: not-allowed !important;
 }
+
+.swiper_tabs {
+  max-width: 225px;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper_tabs .swiper-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6px !important;
+}
+
+.swiper_tabs .swiper-slide {
+  width: 100% !important;
+  max-height: 150px !important;
+  height: 100%;
+  opacity: 0.4;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.swiper_tabs .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
