--- a/src/Components/BuildingImageSlider/styles.css
+++ b/src/Components/BuildingImageSlider/styles.css
@@ -1,54 +1,57 @@
 /* slider arrow button style  */
 .swiper-Btn {
-	@apply w-[38px] h-[38px] rounded-full bg-black/75 text-xl;
+  @apply w-[38px] h-[38px] rounded-full bg-black/75 text-xl;
 }
 
 .swiper-Btn::after {
-	@apply text-2xl font-extrabold;
+  @apply text-2xl font-extrabold;
 }
 
 .swiper-button-next {
-	@apply swiper-Btn pl-1;
+  @apply swiper-Btn pl-1;
 }
 
 .swiper-button-prev {
-	@apply swiper-Btn;
+  @apply swiper-Btn;
 }
 
 .swiper-button-prev .swiper-button-disabled {
-	cursor: not-allowed !important;
+  cursor: not-allowed !important;
 }
 
 .swiper_tabs {
-	max-width: 225px;
-	width: 100%;
-	height: 100%;
+  max-width: 225px;
+  width: 100%;
+  height: 100%;
 }
 
 .swiper_tabs .swiper-wrapper {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	gap: 6px !important;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6px !important;
 }
 
 .swiper_tabs .swiper-slide {
-	width: 100% !important;
-	max-height: 150px !important;
-	height: 100%;
-	opacity: 0.4;
-	border-radius: 10px;
-	overflow: hidden;
+  width: 100% !important;
+  max-height: 150px !important;
+  height: 100%;
+  opacity: 0.4;
+  border-radius: 10px;
+  margin-right: 0px !important;
+  margin-bottom: 0px !important;
+  overflow: hidden;
+  cursor: pointer !important;
 }
 
 .swiper_tabs .swiper-slide-thumb-active {
-	opacity: 1;
+  opacity: 1;
 }
 
 .swiper-slide img {
-	display: block;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
