refactor: create profile page and categories section

--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -6,3 +6,17 @@
   align-items: flex-end !important;
   gap: 29px !important;
 }
+
+.swiper-button-prev,
+.swiper-button-next {
+  display: none !important;
+}
+
+/* .swiper-button-next {
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  width: 10px !important;
+  height: 10px !important;
+} */
