Fixed slider issues in bulding details page

--- a/src/Components/BuildingSlider/styles.css
+++ b/src/Components/BuildingSlider/styles.css
@@ -29,22 +29,25 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 6px !important;
+  gap: 0 !important;
 }
 
 .swiper_tabs > .swiper-slide {
   width: 100% !important;
   height: 100%;
-  opacity: 0.4;
   border-radius: 10px;
   margin-right: 0px !important;
-  margin-bottom: 0 !important;
   overflow: hidden;
+}
+
+.swiper_tabs .swiper-wrapper .swiper-slide {
+  opacity: 0.4;
+  margin-bottom: 5px !important;
   cursor: pointer !important;
 }
 
-.swiper_tabs > .swiper-slide-thumb-active {
-  opacity: 1;
+.swiper_tabs .swiper-slide-thumb-active {
+  opacity: 1 !important;
 }
 
 .swiper-slide > img {
