--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,12 +39,13 @@ input[type="number"] {
 
 /* Handle */
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #2ab7dd;
+  background-color: #747474;
+  border-radius: 10px;
 }
 
 /* Track */
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
+  background-color: transparent;
 }
 
 /* Handle on hover */
